test(drive): use API 26 compatible file reads